<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/backImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/backImageView"
        android:fontFamily="@font/garamond_bold"
        android:text="@string/add_new_recipe"
        android:textColor="@color/darkGrey"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/addRecipeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_baseline_check_24" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/backImageView"
        android:layout_marginTop="5dp"
        android:paddingBottom="60dp"
        android:background="@drawable/background_categories">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/title"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/titleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/custom_edit_text_login"
                    android:fontFamily="@font/garamond_regular"
                    android:hint="@string/title"
                    android:inputType="text|textVisiblePassword|textCapSentences"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titleEditText"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/description"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/description"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/custom_edit_text_login"
                    android:fontFamily="@font/garamond_regular"
                    android:hint="@string/description"
                    android:inputType="textMultiLine|textVisiblePassword|textCapSentences"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:scrollbars="vertical"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/descriptionEditText"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/ingredients"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ingredientsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ingredients"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/custom_edit_text_login"
                    android:fontFamily="@font/garamond_regular"
                    android:hint="@string/ingredients"
                    android:inputType="textMultiLine|textVisiblePassword|textCapSentences"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/instructions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ingredientsEditText"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/instructions"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/instructionsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/instructions"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/custom_edit_text_login"
                    android:fontFamily="@font/garamond_regular"
                    android:hint="@string/instructions"
                    android:inputType="textMultiLine|textVisiblePassword|textCapSentences"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:textSize="20sp" />


                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/instructionsEditText"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:fontFamily="@font/garamond_bold"
                            android:gravity="end"
                            android:text="@string/number_of_people"
                            android:textColor="@color/darkRed"
                            android:textSize="16sp" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5">

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="10dp">

                                <Spinner
                                    android:id="@+id/numberOfPeopleSpinner"
                                    android:layout_width="85dp"
                                    android:layout_height="25dp"
                                    android:spinnerMode="dropdown" />
                            </androidx.cardview.widget.CardView>


                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:fontFamily="@font/garamond_bold"
                            android:gravity="end"
                            android:text="@string/duration"
                            android:textColor="@color/darkRed"
                            android:textSize="16sp" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <androidx.cardview.widget.CardView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginStart="10dp">

                                        <Spinner
                                            android:id="@+id/hoursSpinner"
                                            android:layout_width="85dp"
                                            android:layout_height="25dp"
                                            android:spinnerMode="dropdown" />

                                    </androidx.cardview.widget.CardView>


                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="5dp"
                                        android:fontFamily="@font/garamond_regular"
                                        android:text="@string/h"
                                        android:textSize="20sp" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:orientation="horizontal">

                                    <androidx.cardview.widget.CardView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_marginStart="10dp">

                                        <Spinner
                                            android:id="@+id/minutesSpinner"
                                            android:layout_width="85dp"
                                            android:layout_height="25dp"
                                            android:spinnerMode="dropdown" />

                                    </androidx.cardview.widget.CardView>


                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="5dp"
                                        android:fontFamily="@font/garamond_regular"
                                        android:text="@string/m"
                                        android:textSize="20sp" />

                                </LinearLayout>

                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>


                <TextView
                    android:id="@+id/addPicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linearLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/add_picture_regular"
                    android:textSize="25sp" />

                <ImageView
                    android:id="@+id/addPictureImageView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_below="@id/addPicture"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:src="@drawable/ic_baseline_image_24" />

                <TextView
                    android:id="@+id/removePictureTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/addPictureImageView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:text="@string/remove_current_picture"
                    android:textSize="15sp"
                    android:visibility="gone" />


            </RelativeLayout>


        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />

</RelativeLayout>